# Image_Processing_Decoder

./: CMakeLists.txt  Simulation.cpp  Simulation.h  assets.cpp  camera.cpp  loop.cpp  main.cpp  math.cpp  processor.cpp  processor.h  setter.h  vector.cpp
Canvas/: Canvas.cpp  Canvas.h
settings/: camera.yaml
